--- a/Zhihugit/app/src/main/res/values/strings.xml
+++ b/Zhihugit/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="message_menu">消息</string>
     <string name="about">关于</string>
     <string name="exit">退出</string>
+    <string name="clear_unread">清除未读</string>
 </resources>
